--- a/Shop/php/components/menu/menu.html
+++ b/Shop/php/components/menu/menu.html
@@ -172,7 +172,7 @@
                 <!-- Introduction -->
                 <div class="col-lg-12 col-md-6 mb-sm-3">
                   <ul>
-                    <li class="dropdown-item"><a href="contact.html">Contact Us</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="faq.html">FAQ</a></li>
                   </ul>
